--- a/notebooks/Sharp.ipynb
+++ b/notebooks/Sharp.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "be4ff71e",
+   "execution_count": 150,
+   "id": "73a90d57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "id": "d7655171",
+   "execution_count": 169,
+   "id": "0058e6d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,8 +45,9 @@
     "        self.part = part\n",
     "        self.bought = [False for _ in range(self.levels_num)]\n",
     "\n",
-    "    def trade(self, df_path):\n",
-    "        df = pd.read_csv(df_path)\n",
+    "    def trade(self, df):\n",
+    "#         df = pd.read_csv(df_path)\n",
+    "        \n",
     "        # use_mean - use mean price over last month as a ref level, else use first open price\n",
     "        ref_price = df.iloc[0]['Open']\n",
     "        self.ref_price = ref_price\n",
@@ -105,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "8d027840",
+   "id": "3208aed9",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "07f772c8",
+   "id": "09485bd1",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "30cab722",
+   "id": "8a265461",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5ae9d5a4",
+   "id": "839a3e5f",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "24c6ef4e",
+   "id": "29bbd2b7",
    "metadata": {},
    "outputs": [
     {
@@ -257,56 +258,413 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0490f92e",
+   "execution_count": 152,
+   "id": "787a2404",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calculate_trade(df, levels_num, use_up, part, levels_step):\n",
+    "    grid_bot = GridBot(levels_num=10, balance=100000, use_up = True, part=20, levels_step=0.001)\n",
+    "    grid_bot.trade(df)\n",
+    "    grid_bot.balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "df3df045",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-10-17 00:00:00</td>\n",
+       "      <td>28500.77</td>\n",
+       "      <td>28522.68</td>\n",
+       "      <td>28500.77</td>\n",
+       "      <td>28515.91</td>\n",
+       "      <td>50.70982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-10-17 00:01:00</td>\n",
+       "      <td>28515.91</td>\n",
+       "      <td>28515.92</td>\n",
+       "      <td>28496.23</td>\n",
+       "      <td>28496.23</td>\n",
+       "      <td>23.65223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-10-17 00:02:00</td>\n",
+       "      <td>28496.24</td>\n",
+       "      <td>28507.30</td>\n",
+       "      <td>28488.15</td>\n",
+       "      <td>28507.29</td>\n",
+       "      <td>26.60150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-10-17 00:03:00</td>\n",
+       "      <td>28507.29</td>\n",
+       "      <td>28528.52</td>\n",
+       "      <td>28507.29</td>\n",
+       "      <td>28528.52</td>\n",
+       "      <td>25.37479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-10-17 00:04:00</td>\n",
+       "      <td>28528.52</td>\n",
+       "      <td>28541.50</td>\n",
+       "      <td>28528.51</td>\n",
+       "      <td>28540.52</td>\n",
+       "      <td>39.02155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4316</th>\n",
+       "      <td>2023-10-19 23:56:00</td>\n",
+       "      <td>28694.02</td>\n",
+       "      <td>28703.57</td>\n",
+       "      <td>28694.02</td>\n",
+       "      <td>28700.84</td>\n",
+       "      <td>9.59389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4317</th>\n",
+       "      <td>2023-10-19 23:57:00</td>\n",
+       "      <td>28700.83</td>\n",
+       "      <td>28704.71</td>\n",
+       "      <td>28700.83</td>\n",
+       "      <td>28704.71</td>\n",
+       "      <td>8.85771</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4318</th>\n",
+       "      <td>2023-10-19 23:58:00</td>\n",
+       "      <td>28704.70</td>\n",
+       "      <td>28711.63</td>\n",
+       "      <td>28703.08</td>\n",
+       "      <td>28709.84</td>\n",
+       "      <td>36.94430</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4319</th>\n",
+       "      <td>2023-10-19 23:59:00</td>\n",
+       "      <td>28709.83</td>\n",
+       "      <td>28717.82</td>\n",
+       "      <td>28709.83</td>\n",
+       "      <td>28713.71</td>\n",
+       "      <td>43.00736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4320</th>\n",
+       "      <td>2023-10-20 00:00:00</td>\n",
+       "      <td>28713.71</td>\n",
+       "      <td>28722.62</td>\n",
+       "      <td>28705.10</td>\n",
+       "      <td>28716.26</td>\n",
+       "      <td>43.55974</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4321 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Time      Open      High       Low     Close    Volume\n",
+       "0    2023-10-17 00:00:00  28500.77  28522.68  28500.77  28515.91  50.70982\n",
+       "1    2023-10-17 00:01:00  28515.91  28515.92  28496.23  28496.23  23.65223\n",
+       "2    2023-10-17 00:02:00  28496.24  28507.30  28488.15  28507.29  26.60150\n",
+       "3    2023-10-17 00:03:00  28507.29  28528.52  28507.29  28528.52  25.37479\n",
+       "4    2023-10-17 00:04:00  28528.52  28541.50  28528.51  28540.52  39.02155\n",
+       "...                  ...       ...       ...       ...       ...       ...\n",
+       "4316 2023-10-19 23:56:00  28694.02  28703.57  28694.02  28700.84   9.59389\n",
+       "4317 2023-10-19 23:57:00  28700.83  28704.71  28700.83  28704.71   8.85771\n",
+       "4318 2023-10-19 23:58:00  28704.70  28711.63  28703.08  28709.84  36.94430\n",
+       "4319 2023-10-19 23:59:00  28709.83  28717.82  28709.83  28713.71  43.00736\n",
+       "4320 2023-10-20 00:00:00  28713.71  28722.62  28705.10  28716.26  43.55974\n",
+       "\n",
+       "[4321 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "1c9d3d0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "day_1 = df[(df['Time'] > '2023-10-16') & (df['Time'] < '2023-10-18')]\n",
+    "day_2 = df[(df['Time'] > '2023-10-17') & (df['Time'] < '2023-10-19')]\n",
+    "day_3 = df[(df['Time'] > '2023-10-18') & (df['Time'] < '2023-10-20')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "id": "6e67a056",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1440it [00:00, 19661.70it/s]\n",
+      "2879it [00:00, 20809.86it/s]\n",
+      "2879it [00:00, 19200.16it/s]\n",
+      "1440it [00:00, 18196.11it/s]\n",
+      "2879it [00:00, 24287.59it/s]\n",
+      "2879it [00:00, 22038.34it/s]\n",
+      "1440it [00:00, 23914.02it/s]\n",
+      "2879it [00:00, 18399.29it/s]\n",
+      "2879it [00:00, 18788.55it/s]\n",
+      "1440it [00:00, 23210.98it/s]\n",
+      "2879it [00:00, 23739.59it/s]\n",
+      "2879it [00:00, 24117.42it/s]\n",
+      "1440it [00:00, 29153.82it/s]\n",
+      "2879it [00:00, 23927.27it/s]\n",
+      "2879it [00:00, 29200.29it/s]\n",
+      "1440it [00:00, 29577.27it/s]\n",
+      "2879it [00:00, 26635.94it/s]\n",
+      "2879it [00:00, 30603.72it/s]\n",
+      "1440it [00:00, 23773.68it/s]\n",
+      "2879it [00:00, 30146.60it/s]\n",
+      "2879it [00:00, 29091.88it/s]\n",
+      "1440it [00:00, 20872.81it/s]\n",
+      "2879it [00:00, 20508.18it/s]\n",
+      "2879it [00:00, 21246.98it/s]\n",
+      "1440it [00:00, 27625.53it/s]\n",
+      "2879it [00:00, 24821.89it/s]\n",
+      "2879it [00:00, 24156.89it/s]\n",
+      "1440it [00:00, 19103.97it/s]\n",
+      "2879it [00:00, 15067.39it/s]\n",
+      "2879it [00:00, 17357.12it/s]\n",
+      "1440it [00:00, 24974.97it/s]\n",
+      "2879it [00:00, 23543.98it/s]\n",
+      "2879it [00:00, 26016.78it/s]\n",
+      "1440it [00:00, 18121.26it/s]\n",
+      "2879it [00:00, 18239.05it/s]\n",
+      "2879it [00:00, 18762.33it/s]\n",
+      "1440it [00:00, 19716.57it/s]\n",
+      "2879it [00:00, 23175.57it/s]\n",
+      "2879it [00:00, 23402.67it/s]\n",
+      "1440it [00:00, 19857.76it/s]\n",
+      "2879it [00:00, 17455.05it/s]\n",
+      "2879it [00:00, 16590.17it/s]\n",
+      "1440it [00:00, 20214.53it/s]\n",
+      "2879it [00:00, 12499.54it/s]\n",
+      "2879it [00:00, 25466.34it/s]\n",
+      "1440it [00:00, 28230.87it/s]\n",
+      "2879it [00:00, 24919.83it/s]\n",
+      "2879it [00:00, 26035.74it/s]\n",
+      "1440it [00:00, 34501.10it/s]\n",
+      "2879it [00:00, 26278.58it/s]\n",
+      "2879it [00:00, 29729.48it/s]\n",
+      "1440it [00:00, 28313.72it/s]\n",
+      "2879it [00:00, 26731.69it/s]\n",
+      "2879it [00:00, 29426.79it/s]\n",
+      "1440it [00:00, 23009.63it/s]\n",
+      "2879it [00:00, 22898.48it/s]\n",
+      "2879it [00:00, 23951.81it/s]\n",
+      "1440it [00:00, 35574.26it/s]\n",
+      "2879it [00:00, 28122.75it/s]\n",
+      "2879it [00:00, 28856.28it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "shrp = []\n",
+    "np.random.seed(42)\n",
+    "for k in range(20):\n",
+    "    l_n, p, l_s = np.random.randint(1, 10), np.random.randint(1, 10), np.random.randint(1, 10) / 1000\n",
+    "    for d in [day_1, day_2, day_3]:\n",
+    "        grid_bot = GridBot(levels_num=l_n, balance=100000, use_up = True, part=p, levels_step=l_s)\n",
+    "        grid_bot.trade(d)\n",
+    "        shrp.append(grid_bot.balance - 1e5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "id": "16735580",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.3840816806341678"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(shrp)/ np.std(shrp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "id": "49ab8487",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1440it [00:00, 20903.37it/s]\n",
+      "2879it [00:00, 20199.84it/s]\n",
+      "2879it [00:00, 20055.11it/s]\n",
+      "1440it [00:00, 24989.23it/s]\n",
+      "2879it [00:00, 23309.47it/s]\n",
+      "2879it [00:00, 21078.27it/s]\n",
+      "1440it [00:00, 23316.26it/s]\n",
+      "2879it [00:00, 19594.94it/s]\n",
+      "2879it [00:00, 19653.21it/s]\n",
+      "1440it [00:00, 20159.47it/s]\n",
+      "2879it [00:00, 22876.92it/s]\n",
+      "2879it [00:00, 23131.67it/s]\n",
+      "1440it [00:00, 29623.55it/s]\n",
+      "2879it [00:00, 23496.29it/s]\n",
+      "2879it [00:00, 26667.46it/s]\n",
+      "1440it [00:00, 26675.43it/s]\n",
+      "2879it [00:00, 30832.20it/s]\n",
+      "2879it [00:00, 25506.09it/s]\n",
+      "1440it [00:00, 32955.38it/s]\n",
+      "2879it [00:00, 25419.76it/s]\n",
+      "2879it [00:00, 28067.71it/s]\n",
+      "1440it [00:00, 18826.65it/s]\n",
+      "2879it [00:00, 20578.39it/s]\n",
+      "2879it [00:00, 19202.42it/s]\n",
+      "1440it [00:00, 29670.70it/s]\n",
+      "2879it [00:00, 26371.90it/s]\n",
+      "2879it [00:00, 28157.77it/s]\n",
+      "1440it [00:00, 16207.43it/s]\n",
+      "2879it [00:00, 16626.44it/s]\n",
+      "2879it [00:00, 18141.37it/s]\n",
+      "1440it [00:00, 21105.19it/s]\n",
+      "2879it [00:00, 24442.45it/s]\n",
+      "2879it [00:00, 26158.41it/s]\n",
+      "1440it [00:00, 15703.16it/s]\n",
+      "2879it [00:00, 17055.65it/s]\n",
+      "2879it [00:00, 17867.78it/s]\n",
+      "1440it [00:00, 29399.76it/s]\n",
+      "2879it [00:00, 23291.94it/s]\n",
+      "2879it [00:00, 23319.42it/s]\n",
+      "1440it [00:00, 17127.18it/s]\n",
+      "2879it [00:00, 16726.02it/s]\n",
+      "2879it [00:00, 17663.13it/s]\n",
+      "1440it [00:00, 20215.00it/s]\n",
+      "2879it [00:00, 24824.49it/s]\n",
+      "2879it [00:00, 24023.91it/s]\n",
+      "1440it [00:00, 31240.23it/s]\n",
+      "2879it [00:00, 24491.93it/s]\n",
+      "2879it [00:00, 26204.62it/s]\n",
+      "1440it [00:00, 29833.53it/s]\n",
+      "2879it [00:00, 30060.22it/s]\n",
+      "2879it [00:00, 24715.70it/s]\n",
+      "1440it [00:00, 27814.46it/s]\n",
+      "2879it [00:00, 28055.51it/s]\n",
+      "2879it [00:00, 28876.78it/s]\n",
+      "1440it [00:00, 21913.89it/s]\n",
+      "2879it [00:00, 21293.51it/s]\n",
+      "2879it [00:00, 25775.81it/s]\n",
+      "1440it [00:00, 29974.18it/s]\n",
+      "2879it [00:00, 29598.02it/s]\n",
+      "2879it [00:00, 25938.48it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "shrp = []\n",
+    "np.random.seed(42)\n",
+    "for k in range(20):\n",
+    "    l_n, p, l_s = np.random.randint(1, 10), np.random.randint(1, 10), np.random.randint(1, 10) / 1000\n",
+    "    for d in [day_1, day_2, day_3]:\n",
+    "        grid_bot = GridBot(levels_num=l_n, balance=100000, use_up = False, part=p, levels_step=l_s)\n",
+    "        grid_bot.trade(d)\n",
+    "        shrp.append(grid_bot.balance - 1e5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "id": "2921f9fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.3307712470173012"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(shrp)/ np.std(shrp)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed482b4d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff27af61",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "80b39009",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab4ab349",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc858364",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d9339b9",
+   "id": "eb211f36",
    "metadata": {},
    "outputs": [],
    "source": []
