--- a/notebooks/Sharp.ipynb
+++ b/notebooks/Sharp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 1,
    "id": "73a90d57",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 4,
    "id": "0058e6d2",
    "metadata": {},
    "outputs": [],
@@ -53,8 +53,8 @@
     "        self.wasted = []\n",
     "        self.bought = [False for _ in range(self.levels_num)]\n",
     "\n",
-    "    def trade(self, df):\n",
-    "#         df = pd.read_csv(df_path)\n",
+    "    def trade(self, df_path):\n",
+    "        df = pd.read_csv(df_path)\n",
     "        ref_price = df.iloc[0]['Open']\n",
     "\n",
     "        self.ref_price = ref_price\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "id": "3208aed9",
    "metadata": {},
    "outputs": [
@@ -148,14 +148,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "4321it [00:00, 15108.59it/s]"
+      "5761it [00:00, 10670.65it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100569.3783247354\n"
+      "93871.34203707994\n"
      ]
     },
     {
@@ -167,9 +167,64 @@
     }
    ],
    "source": [
-    "grid_bot = GridBot(levels_num=12, balance=100000, use_up = False, levels_step=0.002)\n",
+    "grid_bot = GridBot(levels_num=14, balance=100000, use_up = False, levels_step=0.001)\n",
     "grid_bot.trade('./../data/raw/btcusdt.csv')\n",
     "print(grid_bot.balance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "69c68074",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Regular</th>\n",
+       "      <th>RL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>93871.342037</td>\n",
+       "      <td>97538.237127</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Regular            RL\n",
+       "0  93871.342037  97538.237127"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame([grid_bot.balance, 97538.2371274]).T.rename(columns={0:'Regular', 1:'RL'})"
    ]
   },
   {
@@ -1056,13 +1111,7 @@
       "1440it [00:00, 22152.45it/s]\n",
       "1440it [00:00, 21816.14it/s]\n",
       "1440it [00:00, 21815.82it/s]\n",
-      "1440it [00:00, 22500.37it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "1440it [00:00, 22500.37it/s]\n",
       "1440it [00:00, 23223.83it/s]\n",
       "1440it [00:00, 22854.82it/s]\n",
       "1440it [00:00, 22496.60it/s]\n",
@@ -1632,13 +1681,7 @@
       "1440it [00:00, 16000.10it/s]\n",
       "1440it [00:00, 17776.66it/s]\n",
       "1440it [00:00, 16742.43it/s]\n",
-      "1440it [00:00, 17559.13it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "1440it [00:00, 17559.13it/s]\n",
       "1440it [00:00, 17561.02it/s]\n",
       "1440it [00:00, 17143.81it/s]\n",
       "1440it [00:00, 16747.54it/s]\n",
@@ -2208,13 +2251,7 @@
       "1440it [00:00, 14257.05it/s]\n",
       "1440it [00:00, 14257.11it/s]\n",
       "1440it [00:00, 14117.35it/s]\n",
-      "1440it [00:00, 14127.32it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "1440it [00:00, 14127.32it/s]\n",
       "1440it [00:00, 14257.05it/s]\n",
       "1440it [00:00, 13978.65it/s]\n",
       "1440it [00:00, 14256.88it/s]\n",
@@ -2784,13 +2821,7 @@
       "1440it [00:00, 22151.47it/s]\n",
       "1440it [00:00, 22148.87it/s]\n",
       "1440it [00:00, 21176.74it/s]\n",
-      "1440it [00:00, 22155.05it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "1440it [00:00, 22155.05it/s]\n",
       "1440it [00:00, 22498.11it/s]\n",
       "1440it [00:00, 21492.57it/s]\n",
       "1440it [00:00, 21814.72it/s]\n",
@@ -3360,13 +3391,7 @@
       "1440it [00:00, 17349.51it/s]\n",
       "1440it [00:00, 17560.26it/s]\n",
       "1440it [00:00, 17776.50it/s]\n",
-      "1440it [00:00, 17775.09it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "1440it [00:00, 17775.09it/s]\n",
       "1440it [00:00, 17778.60it/s]\n",
       "1440it [00:00, 17562.10it/s]\n",
       "1440it [00:00, 17349.96it/s]\n",
@@ -3936,13 +3961,7 @@
       "1440it [00:00, 14401.49it/s]\n",
       "1440it [00:00, 14554.33it/s]\n",
       "1440it [00:00, 14545.67it/s]\n",
-      "1440it [00:00, 14544.55it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "1440it [00:00, 14544.55it/s]\n",
       "1440it [00:00, 14400.25it/s]\n",
       "1440it [00:00, 13847.32it/s]\n",
       "1440it [00:00, 14119.00it/s]\n",
@@ -4521,13 +4540,7 @@
       "1440it [00:00, 20867.33it/s]\n",
       "1440it [00:00, 21177.78it/s]\n",
       "1440it [00:00, 20870.28it/s]\n",
-      "1440it [00:00, 21178.97it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "1440it [00:00, 21178.97it/s]\n",
       "1440it [00:00, 21183.50it/s]\n",
       "1440it [00:00, 21174.89it/s]\n",
       "1440it [00:00, 22151.71it/s]\n",
@@ -5097,13 +5110,7 @@
       "1440it [00:00, 17352.25it/s]\n",
       "1440it [00:00, 17765.94it/s]\n",
       "1440it [00:00, 17558.52it/s]\n",
-      "1440it [00:00, 17776.24it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "1440it [00:00, 17776.24it/s]\n",
       "1440it [00:00, 17775.46it/s]\n",
       "1440it [00:00, 17560.10it/s]\n",
       "1440it [00:00, 17559.24it/s]\n",
@@ -5673,13 +5680,7 @@
       "1440it [00:00, 13584.39it/s]\n",
       "1440it [00:00, 13211.24it/s]\n",
       "1440it [00:00, 13585.55it/s]\n",
-      "1440it [00:00, 12202.45it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "1440it [00:00, 12202.45it/s]\n",
       "1440it [00:00, 13979.88it/s]\n",
       "1440it [00:00, 13980.62it/s]\n",
       "1440it [00:00, 13585.95it/s]\n",
@@ -6522,13 +6523,7 @@
       "4320it [00:00, 22856.26it/s]\n",
       "4320it [00:00, 23350.43it/s]\n",
       "4320it [00:00, 23351.45it/s]\n",
-      "4320it [00:00, 23101.63it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "4320it [00:00, 23101.63it/s]\n",
       "4320it [00:00, 22617.77it/s]\n",
       "4320it [00:00, 22736.81it/s]\n",
       "4320it [00:00, 22978.90it/s]\n",
@@ -7098,13 +7093,7 @@
       "4320it [00:00, 17560.50it/s]\n",
       "4320it [00:00, 17890.31it/s]\n",
       "4320it [00:00, 17851.27it/s]\n",
-      "4320it [00:00, 17669.82it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "4320it [00:00, 17669.82it/s]\n",
       "4320it [00:00, 17851.46it/s]\n",
       "4320it [00:00, 17632.15it/s]\n",
       "4320it [00:00, 17561.11it/s]\n",
@@ -7674,13 +7663,7 @@
       "4320it [00:00, 14496.78it/s]\n",
       "4320it [00:00, 14644.12it/s]\n",
       "4320it [00:00, 14545.13it/s]\n",
-      "4320it [00:00, 14644.10it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "4320it [00:00, 14644.10it/s]\n",
       "4320it [00:00, 14693.60it/s]\n",
       "4320it [00:00, 14545.61it/s]\n",
       "4320it [00:00, 14545.13it/s]\n",
@@ -8128,13 +8111,7 @@
       "4320it [00:00, 21817.45it/s]\n",
       "4320it [00:00, 23225.08it/s]\n",
       "4320it [00:00, 23101.01it/s]\n",
-      "4320it [00:00, 23478.56it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "4320it [00:00, 23478.56it/s]\n",
       "4320it [00:00, 23226.06it/s]\n",
       "4320it [00:00, 22978.84it/s]\n",
       "4320it [00:00, 23478.26it/s]\n",
@@ -8704,13 +8681,7 @@
       "4320it [00:00, 17632.63it/s]\n",
       "4320it [00:00, 17846.82it/s]\n",
       "4320it [00:00, 17349.38it/s]\n",
-      "4320it [00:00, 17925.69it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "4320it [00:00, 17925.69it/s]\n",
       "4320it [00:00, 17777.74it/s]\n",
       "4320it [00:00, 17613.69it/s]\n",
       "4320it [00:00, 17700.68it/s]\n",
@@ -9280,13 +9251,7 @@
       "4320it [00:00, 13890.57it/s]\n",
       "4320it [00:00, 14074.11it/s]\n",
       "4320it [00:00, 14545.46it/s]\n",
-      "4320it [00:00, 14594.24it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "4320it [00:00, 14594.24it/s]\n",
       "4320it [00:00, 14496.28it/s]\n",
       "4320it [00:00, 14496.71it/s]\n",
       "4320it [00:00, 14400.00it/s]\n",
@@ -9840,13 +9805,7 @@
       "4320it [00:00, 23100.72it/s]\n",
       "4320it [00:00, 23477.32it/s]\n",
       "4320it [00:00, 22978.70it/s]\n",
-      "4320it [00:00, 23470.56it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "4320it [00:00, 23470.56it/s]\n",
       "4320it [00:00, 23232.08it/s]\n",
       "4320it [00:00, 22979.57it/s]\n",
       "4320it [00:00, 23225.73it/s]\n",
@@ -10416,13 +10375,7 @@
       "4320it [00:00, 17007.94it/s]\n",
       "4320it [00:00, 17704.47it/s]\n",
       "4320it [00:00, 17851.48it/s]\n",
-      "4320it [00:00, 17926.22it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "4320it [00:00, 17926.22it/s]\n",
       "4320it [00:00, 17632.20it/s]\n",
       "4320it [00:00, 17348.93it/s]\n",
       "4320it [00:00, 17142.23it/s]\n",
@@ -10992,13 +10945,7 @@
       "4320it [00:00, 14447.95it/s]\n",
       "4320it [00:00, 14743.67it/s]\n",
       "4320it [00:00, 14643.67it/s]\n",
-      "4320it [00:00, 14644.08it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "4320it [00:00, 14644.08it/s]\n",
       "4320it [00:00, 14594.32it/s]\n",
       "4320it [00:00, 14496.40it/s]\n",
       "4320it [00:00, 14496.40it/s]\n",
@@ -11580,13 +11527,7 @@
       "10080it [00:00, 20159.83it/s]\n",
       "10080it [00:00, 19803.38it/s]\n",
       "10080it [00:00, 19879.45it/s]\n",
-      "10080it [00:00, 19999.81it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "10080it [00:00, 19999.81it/s]\n",
       "10080it [00:00, 20200.21it/s]\n",
       "10080it [00:00, 20200.47it/s]\n",
       "10080it [00:00, 18805.95it/s]\n",
@@ -12326,13 +12267,7 @@
       "10080it [00:00, 20241.24it/s]\n",
       "10080it [00:00, 20037.50it/s]\n",
       "10080it [00:00, 20119.49it/s]\n",
-      "10080it [00:00, 20159.69it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "10080it [00:00, 20159.69it/s]\n",
       "10080it [00:00, 20281.49it/s]\n",
       "10080it [00:00, 20180.89it/s]\n",
       "10080it [00:00, 18771.04it/s]\n",
@@ -13044,13 +12979,7 @@
       "10080it [00:00, 20160.11it/s]\n",
       "10080it [00:00, 20077.28it/s]\n",
       "10080it [00:00, 19960.44it/s]\n",
-      "10080it [00:00, 20080.02it/s]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "10080it [00:00, 20080.02it/s]\n",
       "10080it [00:00, 20234.15it/s]\n",
       "10080it [00:00, 20281.46it/s]\n",
       "10080it [00:00, 18563.60it/s]\n",
