--- a/src/models/grid_bot_rl_v2/test.ipynb
+++ b/src/models/grid_bot_rl_v2/test.ipynb
@@ -115,7 +115,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -129,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
